force-app/main/default/objects/InboundEmail__e/InboundEmail__e.object-meta.xml
<CustomObject>
    <label>Inbound Email</label>
    <pluralLabel>Inbound Emails</pluralLabel>
</CustomObject>