force-app/main/default/objects/InboundEmail__e/fields/EmailReceived__c.field-meta.xml
<CustomField>
    <fullName>EmailReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Received</label>
    <type>Checkbox</type>
</CustomField>