force-app/main/default/objects/InboundEmail__e/fields/FirstOpenedDate__c.field-meta.xml
<CustomField>
    <fullName>FirstOpenedDate__c</fullName>
    <label>FirstOpenedDate</label>
    <type>DateTime</type>
</CustomField>