force-app/main/default/objects/InboundEmail__e/fields/HasAttachments__c.field-meta.xml
<CustomField>
    <fullName>HasAttachments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasAttachments</label>
    <type>Checkbox</type>
</CustomField>