force-app/main/default/objects/InboundEmail__e/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <label>Headers</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>