force-app/main/default/objects/InboundEmail__e/fields/HtmlBody__c.field-meta.xml
<CustomField>
    <fullName>HtmlBody__c</fullName>
    <label>HtmlBody</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>