force-app/main/default/objects/InboundEmail__e/fields/ThreadId__c.field-meta.xml
<CustomField>
    <fullName>ThreadId__c</fullName>
    <description>Field for storing the source&apos;s Case Thread Id, in order to replace in the body of the email / subject.</description>
    <label>ThreadId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>