force-app/main/default/objects/InboundEmail__e/fields/ThreadIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ThreadIdentifier__c</fullName>
    <label>ThreadIdentifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>